force-app/main/default/objects/User/fields/DisponivelPraSustentacao__c.field-meta.xml
<CustomField>
    <fullName>DisponivelPraSustentacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o usuário está disponível para receber ou atuar em demandas de sustentação.</description>
    <label>Disponível pra sustentação</label>
    <type>Checkbox</type>
</CustomField>