force-app/main/default/objects/User/fields/MetaConforto__c.field-meta.xml
<CustomField>
    <fullName>MetaConforto__c</fullName>
    <label>Meta Conforto</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>