force-app/main/default/objects/User/fields/MetaCustosFixos__c.field-meta.xml
<CustomField>
    <fullName>MetaCustosFixos__c</fullName>
    <label>Meta Custos Fixos</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>