force-app/main/default/objects/User/fields/MetaLazer__c.field-meta.xml
<CustomField>
    <fullName>MetaLazer__c</fullName>
    <label>Meta Lazer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>