force-app/main/default/objects/User/fields/MetaLiberdadefinanceira__c.field-meta.xml
<CustomField>
    <fullName>MetaLiberdadefinanceira__c</fullName>
    <label>Meta Liberdade financeira</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>