force-app/main/default/objects/User/fields/MetaObjetivos__c.field-meta.xml
<CustomField>
    <fullName>MetaObjetivos__c</fullName>
    <label>Meta Objetivos</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>